[package]
name = "cch23-bradschwartz"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rocket = {version = "0.5.0", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shuttle-rocket = "0.34.0"
shuttle-runtime = "0.34.0"
tokio = "1.26.0"
